---
source: crates/math-core/src/token_queue.rs
expression: "{x + \\unknowncmd + y}"
---
Error: Unknown command "\unknowncmd".
   ╭─[ <input>:1:6 ]
   │
 1 │ {x + \unknowncmd + y}
   │      ─────┬─────  
   │           ╰─────── unknown command
───╯
